<resources>
    <string name="app_name">Market Rankings</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_success">Logged in as %1$s</string>
    <string name="login_failure_generic">Failed to login: %1$s</string>
    <string name="login_failure_wrong_credentials">Please check your username &amp; password and try again!</string>
    <string name="login_failure_doesnt_exist">We can\'t find an account with this email. Try signing up for an account!</string>
    <string name="signup_success">Registered successfully as %1$s</string>
    <string name="signup_failure_generic">Failed to register: %1$s</string>
    <string name="signup_failure_weak_password">Your password does not meet minimum requirements! Must be at least 6 characters long.</string>
    <string name="signup_failure_already_exists">An account already exists for this email!</string>
    <string name="signup_failure_invalid_format">You must supply a valid formatted email!</string>
    <string name="symbol">symbol</string>
    <string name="name">name</string>
    <string name="currency_name">Currency name</string>
    <string name="symbol_currency">Symbol</string>
    <string name="usd_price">$ USD</string>
    <string name="market_cap">Market Cap</string>
    <string name="symbol_desc">Symbol</string>
    <string name="curr_name">"Name: "</string>
    <string name="price_tracking">Price tracking</string>
    <string name="watchlist">Watchlist</string>
    <string name="failed_to_retrieve">Failed to Retrieve Currency!</string>
    <string name="symbol_short">"Symbol: "</string>
    <string name="mrkt_cap">"Market Cap: "</string>
    <string name="price_short">"Price: "</string>
    <string name="curr_conversion">" Currency Conversion"</string>
    <string name="conversion">" Conversion"</string>
    <string name="personal_watchlist">Personal Watchlist</string>
    <string name="view_personal_watchlist">View Personal Watchlist</string>
    <string name="coin_search">Coin Search</string>
    <string name="coin">Coin</string>
    <string name="search_for_coin">Search for coin</string>
    <string name="view_market_rankings">View Market Rankings</string>
    <string name="market_stats">Market Stats</string>
    <string name="logged_in_as">\Logged in as "</string>
    <string name="registered">"Successfully registered as "</string>
</resources>