<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="32dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/card_view_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/currencyImg"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_margin="8dp"
                android:foreground="?attr/selectableItemBackground"
                android:contentDescription="@string/symbol_desc"
                android:src="@drawable/ic_money"
                app:tint="@color/purple_200" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/currency_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_name"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title" />

                <TextView
                    android:id="@+id/currency_symbol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:text="@string/symbol_currency"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/price_in_usd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/usd_price"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/market_cap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/market_cap"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>